# stoplight-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  up.sh
src/: control.rs  gpio.rs  light_state.rs  lights.rs  main.rs
src/stoplight/: mock.rs  mod.rs  rpi.rs
