[package]
name = "stoplight-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = { version = "0.32.1", features = ["experimental"] }
futures = "0.3.29"
rppal = { version = "0.15.0", optional = true }
serde = "1.0.190"
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[features]
rpi = ["rppal"]
